Fix annoying safari stretched imgs
https://stackoverflow.com/questions/10760243/safari-image-size-auto-height-css/10760276

--- a/assets/css/2019-04-10-visualizing-americas-rural-physician-shortage.css
+++ b/assets/css/2019-04-10-visualizing-americas-rural-physician-shortage.css
@@ -9,6 +9,7 @@
 }
 
 .content img {
+  align-self: flex-start;
   max-width: calc(100% + 4rem);
   margin: 0 -2rem;
 }
